syntax = "proto3";

service ShelterProto{
  rpc GetClosestShelter (GetClosestShelterRequest) returns (GetClosestShelterReply);
  rpc GetShelterLocation (GetShelterLocationRequest) returns (GetShelterLocationReply);
  rpc IsUserOwnerOfShelter (IsUserOwnerOfShelterRequest) returns (IsUserOwnerOfShelterReply);
  rpc DoesShelterExists (DoesShelterExistsRequest) returns (DoesShelterExistsReply);
}

message GetShelterLocationRequest{
  string shelterId = 1;
}

message GetClosestShelterRequest{
  string longitude = 1;
  string latitude = 2;
}

message IsUserOwnerOfShelterRequest{
  string userId = 1;
  string shelterId = 2;
}

message DoesShelterExistsRequest{
  string shelterId = 1;
}

message GetClosestShelterReply{
  string shelterId = 1;
}

message GetShelterLocationReply{
  string longitude = 1;
  string latitude = 2;
}

message IsUserOwnerOfShelterReply{
  bool isOwner = 1;
}

message DoesShelterExistsReply{
  bool doesExists = 1;
}